Update project for Java 8 compatibility